--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
         "type": "git",
         "url": "https://github.com/alexandreneves/rocketchat-reddit-integration.git"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "scripts": {
+        "minify": "minify ./src/index.js > ./dist/index.js"
+    },
+    "devDependencies": {
+        "minify": "^4.1.1"
+    }
 }
